src/test/ui/async-await/pin-needed-to-poll-2.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> $DIR/pin-needed-to-poll-2.rs:43:18
   |
LL |         Pin::new(&mut self.sleep).poll(cx)
   |         -------- ^^^^^^^^^^^^^^^ within `Sleep`, the trait `Unpin` is not implemented for `PhantomPinned`
   |         |
   |         required by a bound introduced by this call
   |
   = note: consider using `Box::pin`
note: required because it appears within the type `Sleep`
  --> $DIR/pin-needed-to-poll-2.rs:8:8
   |
LL | struct Sleep(std::marker::PhantomPinned);
   |        ^^^^^
note: required by `Pin::<P>::new`
  --> $SRC_DIR/core/src/pin.rs:LL:COL
   |
LL |     pub const fn new(pointer: P) -> Pin<P> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
